# pkg/ova-reason-api/ova-reason-api.pb.go
@@ -116,6 +116,100 @@ func (m *CreateReasonResponse) GetId() uint64 {
 	return 0
 }
 
+type ReplaceReasonRequest struct {
+	Id                   uint64   `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	UserId               uint64   `protobuf:"varint,2,opt,name=userId,proto3" json:"userId,omitempty"`
+	ActionId             uint64   `protobuf:"varint,3,opt,name=actionId,proto3" json:"actionId,omitempty"`
+	Why                  string   `protobuf:"bytes,4,opt,name=why,proto3" json:"why,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *ReplaceReasonRequest) Reset()         { *m = ReplaceReasonRequest{} }
+func (m *ReplaceReasonRequest) String() string { return proto.CompactTextString(m) }
+func (*ReplaceReasonRequest) ProtoMessage()    {}
+func (*ReplaceReasonRequest) Descriptor() ([]byte, []int) {
+	return fileDescriptor_1e1c3f3c6e5e68fd, []int{2}
+}
+
+func (m *ReplaceReasonRequest) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_ReplaceReasonRequest.Unmarshal(m, b)
+}
+func (m *ReplaceReasonRequest) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_ReplaceReasonRequest.Marshal(b, m, deterministic)
+}
+func (m *ReplaceReasonRequest) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_ReplaceReasonRequest.Merge(m, src)
+}
+func (m *ReplaceReasonRequest) XXX_Size() int {
+	return xxx_messageInfo_ReplaceReasonRequest.Size(m)
+}
+func (m *ReplaceReasonRequest) XXX_DiscardUnknown() {
+	xxx_messageInfo_ReplaceReasonRequest.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_ReplaceReasonRequest proto.InternalMessageInfo
+
+func (m *ReplaceReasonRequest) GetId() uint64 {
+	if m != nil {
+		return m.Id
+	}
+	return 0
+}
+
+func (m *ReplaceReasonRequest) GetUserId() uint64 {
+	if m != nil {
+		return m.UserId
+	}
+	return 0
+}
+
+func (m *ReplaceReasonRequest) GetActionId() uint64 {
+	if m != nil {
+		return m.ActionId
+	}
+	return 0
+}
+
+func (m *ReplaceReasonRequest) GetWhy() string {
+	if m != nil {
+		return m.Why
+	}
+	return ""
+}
+
+type ReplaceReasonResponse struct {
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *ReplaceReasonResponse) Reset()         { *m = ReplaceReasonResponse{} }
+func (m *ReplaceReasonResponse) String() string { return proto.CompactTextString(m) }
+func (*ReplaceReasonResponse) ProtoMessage()    {}
+func (*ReplaceReasonResponse) Descriptor() ([]byte, []int) {
+	return fileDescriptor_1e1c3f3c6e5e68fd, []int{3}
+}
+
+func (m *ReplaceReasonResponse) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_ReplaceReasonResponse.Unmarshal(m, b)
+}
+func (m *ReplaceReasonResponse) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_ReplaceReasonResponse.Marshal(b, m, deterministic)
+}
+func (m *ReplaceReasonResponse) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_ReplaceReasonResponse.Merge(m, src)
+}
+func (m *ReplaceReasonResponse) XXX_Size() int {
+	return xxx_messageInfo_ReplaceReasonResponse.Size(m)
+}
+func (m *ReplaceReasonResponse) XXX_DiscardUnknown() {
+	xxx_messageInfo_ReplaceReasonResponse.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_ReplaceReasonResponse proto.InternalMessageInfo
+
 type DescribeReasonRequest struct {
 	Id                   uint64   `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
@@ -127,7 +221,7 @@ func (m *DescribeReasonRequest) Reset()         { *m = DescribeReasonRequest{} }
 func (m *DescribeReasonRequest) String() string { return proto.CompactTextString(m) }
 func (*DescribeReasonRequest) ProtoMessage()    {}
 func (*DescribeReasonRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_1e1c3f3c6e5e68fd, []int{2}
+	return fileDescriptor_1e1c3f3c6e5e68fd, []int{4}
 }
 
 func (m *DescribeReasonRequest) XXX_Unmarshal(b []byte) error {
@@ -166,7 +260,7 @@ func (m *DescribeReasonResponse) Reset()         { *m = DescribeReasonResponse{}
 func (m *DescribeReasonResponse) String() string { return proto.CompactTextString(m) }
 func (*DescribeReasonResponse) ProtoMessage()    {}
 func (*DescribeReasonResponse) Descriptor() ([]byte, []int) {
-	return fileDescriptor_1e1c3f3c6e5e68fd, []int{3}
+	return fileDescriptor_1e1c3f3c6e5e68fd, []int{5}
 }
 
 func (m *DescribeReasonResponse) XXX_Unmarshal(b []byte) error {
@@ -205,7 +299,7 @@ func (m *RemoveReasonRequest) Reset()         { *m = RemoveReasonRequest{} }
 func (m *RemoveReasonRequest) String() string { return proto.CompactTextString(m) }
 func (*RemoveReasonRequest) ProtoMessage()    {}
 func (*RemoveReasonRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_1e1c3f3c6e5e68fd, []int{4}
+	return fileDescriptor_1e1c3f3c6e5e68fd, []int{6}
 }
 
 func (m *RemoveReasonRequest) XXX_Unmarshal(b []byte) error {
@@ -233,6 +327,37 @@ func (m *RemoveReasonRequest) GetId() uint64 {
 	return 0
 }
 
+type RemoveReasonResponse struct {
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *RemoveReasonResponse) Reset()         { *m = RemoveReasonResponse{} }
+func (m *RemoveReasonResponse) String() string { return proto.CompactTextString(m) }
+func (*RemoveReasonResponse) ProtoMessage()    {}
+func (*RemoveReasonResponse) Descriptor() ([]byte, []int) {
+	return fileDescriptor_1e1c3f3c6e5e68fd, []int{7}
+}
+
+func (m *RemoveReasonResponse) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_RemoveReasonResponse.Unmarshal(m, b)
+}
+func (m *RemoveReasonResponse) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_RemoveReasonResponse.Marshal(b, m, deterministic)
+}
+func (m *RemoveReasonResponse) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_RemoveReasonResponse.Merge(m, src)
+}
+func (m *RemoveReasonResponse) XXX_Size() int {
+	return xxx_messageInfo_RemoveReasonResponse.Size(m)
+}
+func (m *RemoveReasonResponse) XXX_DiscardUnknown() {
+	xxx_messageInfo_RemoveReasonResponse.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_RemoveReasonResponse proto.InternalMessageInfo
+
 type ListReasonsResponse struct {
 	Items                []*Reason `protobuf:"bytes,1,rep,name=items,proto3" json:"items,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}  `json:"-"`
@@ -244,7 +369,7 @@ func (m *ListReasonsResponse) Reset()         { *m = ListReasonsResponse{} }
 func (m *ListReasonsResponse) String() string { return proto.CompactTextString(m) }
 func (*ListReasonsResponse) ProtoMessage()    {}
 func (*ListReasonsResponse) Descriptor() ([]byte, []int) {
-	return fileDescriptor_1e1c3f3c6e5e68fd, []int{5}
+	return fileDescriptor_1e1c3f3c6e5e68fd, []int{8}
 }
 
 func (m *ListReasonsResponse) XXX_Unmarshal(b []byte) error {
@@ -286,7 +411,7 @@ func (m *Reason) Reset()         { *m = Reason{} }
 func (m *Reason) String() string { return proto.CompactTextString(m) }
 func (*Reason) ProtoMessage()    {}
 func (*Reason) Descriptor() ([]byte, []int) {
-	return fileDescriptor_1e1c3f3c6e5e68fd, []int{6}
+	return fileDescriptor_1e1c3f3c6e5e68fd, []int{9}
 }
 
 func (m *Reason) XXX_Unmarshal(b []byte) error {
@@ -338,9 +463,12 @@ func (m *Reason) GetWhy() string {
 func init() {
 	proto.RegisterType((*CreateReasonRequest)(nil), "ova.reason.api.CreateReasonRequest")
 	proto.RegisterType((*CreateReasonResponse)(nil), "ova.reason.api.CreateReasonResponse")
+	proto.RegisterType((*ReplaceReasonRequest)(nil), "ova.reason.api.ReplaceReasonRequest")
+	proto.RegisterType((*ReplaceReasonResponse)(nil), "ova.reason.api.ReplaceReasonResponse")
 	proto.RegisterType((*DescribeReasonRequest)(nil), "ova.reason.api.DescribeReasonRequest")
 	proto.RegisterType((*DescribeReasonResponse)(nil), "ova.reason.api.DescribeReasonResponse")
 	proto.RegisterType((*RemoveReasonRequest)(nil), "ova.reason.api.RemoveReasonRequest")
+	proto.RegisterType((*RemoveReasonResponse)(nil), "ova.reason.api.RemoveReasonResponse")
 	proto.RegisterType((*ListReasonsResponse)(nil), "ova.reason.api.ListReasonsResponse")
 	proto.RegisterType((*Reason)(nil), "ova.reason.api.Reason")
 }
@@ -348,34 +476,37 @@ func init() {
 func init() { proto.RegisterFile("ova-reason-api.proto", fileDescriptor_1e1c3f3c6e5e68fd) }
 
 var fileDescriptor_1e1c3f3c6e5e68fd = []byte{
-	// 455 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x53, 0xc1, 0x4e, 0xd5, 0x40,
-	0x14, 0x4d, 0x5b, 0x7c, 0x81, 0x0b, 0x3c, 0xc9, 0x3c, 0x78, 0x79, 0xa9, 0x2e, 0x5e, 0x46, 0x41,
-	0x42, 0x64, 0x26, 0xc1, 0x9d, 0xee, 0x00, 0x13, 0x49, 0x5c, 0x75, 0xa9, 0x46, 0x32, 0x6d, 0xc7,
-	0x32, 0xd1, 0x76, 0xc6, 0xce, 0xb4, 0x06, 0x8d, 0x1b, 0x7f, 0xc1, 0x6f, 0xf1, 0x4b, 0xfc, 0x05,
-	0x3f, 0xc4, 0xbc, 0x4e, 0xdb, 0xb4, 0xa5, 0xc0, 0xae, 0x77, 0xee, 0xc9, 0x39, 0xf7, 0x9e, 0x7b,
-	0x0a, 0xbb, 0xb2, 0x64, 0xc7, 0x39, 0x67, 0x5a, 0x66, 0xc7, 0x4c, 0x09, 0xa2, 0x72, 0x69, 0x24,
-	0x9a, 0xca, 0x92, 0x11, 0xfb, 0x4a, 0x98, 0x12, 0xfe, 0xe3, 0x44, 0xca, 0xe4, 0x0b, 0xa7, 0x4c,
-	0x09, 0xca, 0xb2, 0x4c, 0x1a, 0x66, 0x84, 0xcc, 0xb4, 0x45, 0xfb, 0x8f, 0xea, 0x6e, 0x55, 0x85,
-	0xc5, 0x27, 0xca, 0x53, 0x65, 0xae, 0x6d, 0x13, 0xbf, 0x87, 0xd9, 0x59, 0xce, 0x99, 0xe1, 0x41,
-	0x45, 0x17, 0xf0, 0xaf, 0x05, 0xd7, 0x06, 0xcd, 0x61, 0x52, 0x68, 0x9e, 0x5f, 0xc4, 0x0b, 0x67,
-	0xe9, 0x1c, 0xae, 0x05, 0x75, 0x85, 0x7c, 0x58, 0x67, 0xd1, 0x8a, 0xfc, 0x22, 0x5e, 0xb8, 0x55,
-	0xa7, 0xad, 0xd1, 0x0e, 0x78, 0xdf, 0xae, 0xae, 0x17, 0xde, 0xd2, 0x39, 0xdc, 0x08, 0x56, 0x9f,
-	0xf8, 0x00, 0x76, 0xfb, 0xe4, 0x5a, 0xc9, 0x4c, 0x73, 0x34, 0x05, 0x57, 0x34, 0xcc, 0xae, 0x88,
-	0xf1, 0x33, 0xd8, 0x3b, 0xe7, 0x3a, 0xca, 0x45, 0x38, 0x18, 0x63, 0x08, 0x7c, 0x03, 0xf3, 0x21,
-	0xb0, 0xa6, 0x24, 0x30, 0xb1, 0x2f, 0x15, 0x7a, 0xf3, 0x64, 0x4e, 0xfa, 0x1e, 0x91, 0x1a, 0x5f,
-	0xa3, 0xf0, 0x3e, 0xcc, 0x02, 0x9e, 0xca, 0xf2, 0x1e, 0xc1, 0x33, 0x98, 0xbd, 0x15, 0xda, 0x58,
-	0x90, 0x6e, 0xd5, 0x9e, 0xc3, 0x03, 0x61, 0x78, 0xaa, 0x17, 0xce, 0xd2, 0xbb, 0x43, 0xcc, 0x82,
-	0xf0, 0xc7, 0x66, 0xb6, 0x21, 0x7d, 0xc7, 0x66, 0xf7, 0x56, 0x9b, 0xbd, 0x71, 0x9b, 0xd7, 0x5a,
-	0x9b, 0x4f, 0xfe, 0x78, 0xb0, 0x51, 0x2b, 0xaa, 0x08, 0x65, 0xb0, 0xd5, 0x35, 0x1d, 0x3d, 0x19,
-	0x0e, 0x37, 0x72, 0x6f, 0xff, 0xe9, 0xdd, 0x20, 0xbb, 0x36, 0x9e, 0xfd, 0xfa, 0xfb, 0xef, 0xb7,
-	0xbb, 0x8d, 0xd7, 0xa9, 0x45, 0xea, 0x97, 0xce, 0x11, 0x2a, 0x61, 0xda, 0xbf, 0x09, 0xda, 0x1f,
-	0x92, 0x8d, 0x1e, 0xd7, 0x3f, 0xb8, 0x0f, 0x56, 0xab, 0xee, 0x55, 0xaa, 0x0f, 0xd1, 0x76, 0xa3,
-	0x4a, 0x7f, 0x88, 0xf8, 0x27, 0xfa, 0x00, 0x9b, 0x9d, 0xd3, 0xa0, 0x39, 0xb1, 0x31, 0x27, 0x4d,
-	0xcc, 0xc9, 0xeb, 0x55, 0xcc, 0xfd, 0x1b, 0xeb, 0x8f, 0xdc, 0x13, 0xef, 0x54, 0x12, 0x80, 0xda,
-	0xc5, 0x50, 0x08, 0x5b, 0xdd, 0x7c, 0xdc, 0x74, 0x71, 0x24, 0x3d, 0xfe, 0x2d, 0x33, 0x34, 0x1b,
-	0x1c, 0xf5, 0x37, 0x38, 0x3d, 0x7f, 0x77, 0x9a, 0x08, 0x73, 0x55, 0x84, 0x24, 0x92, 0x29, 0x95,
-	0xdf, 0x65, 0x56, 0x32, 0xda, 0xff, 0xe1, 0xa9, 0xfa, 0x9c, 0x0c, 0x9e, 0x5e, 0xc9, 0x92, 0x5d,
-	0xda, 0xf2, 0x92, 0x29, 0x11, 0x4e, 0x2a, 0xb1, 0x17, 0xff, 0x03, 0x00, 0x00, 0xff, 0xff, 0xaa,
-	0xcd, 0x4f, 0x2a, 0x2b, 0x04, 0x00, 0x00,
+	// 505 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x54, 0xdd, 0x6e, 0xd3, 0x30,
+	0x14, 0x56, 0xd2, 0x51, 0x6d, 0x67, 0x6b, 0x99, 0xdc, 0x36, 0x44, 0x81, 0x8b, 0xca, 0x74, 0x63,
+	0x9a, 0x98, 0x23, 0x8d, 0x3b, 0xb8, 0xdb, 0x86, 0xc4, 0x24, 0xae, 0x72, 0x09, 0x88, 0xc9, 0x4d,
+	0x4d, 0x67, 0xd1, 0xc6, 0x26, 0x76, 0x83, 0x06, 0xe2, 0x86, 0x57, 0xe0, 0x71, 0x78, 0x0c, 0x5e,
+	0x81, 0x07, 0x41, 0x8d, 0xdd, 0x92, 0x3f, 0xda, 0x2b, 0xee, 0x72, 0x8e, 0x3f, 0x9d, 0xef, 0x3b,
+	0x9f, 0x3f, 0x07, 0xfa, 0x22, 0xa3, 0x67, 0x29, 0xa3, 0x4a, 0x24, 0x67, 0x54, 0x72, 0x22, 0x53,
+	0xa1, 0x05, 0xea, 0x8a, 0x8c, 0x12, 0xd3, 0x25, 0x54, 0xf2, 0xe0, 0xd1, 0x54, 0x88, 0xe9, 0x8c,
+	0x85, 0x54, 0xf2, 0x90, 0x26, 0x89, 0xd0, 0x54, 0x73, 0x91, 0x28, 0x83, 0x0e, 0x1e, 0xda, 0xd3,
+	0xbc, 0x1a, 0x2f, 0x3e, 0x84, 0x6c, 0x2e, 0xf5, 0x9d, 0x39, 0xc4, 0x6f, 0xa1, 0x77, 0x99, 0x32,
+	0xaa, 0x59, 0x94, 0x8f, 0x8b, 0xd8, 0xa7, 0x05, 0x53, 0x1a, 0x79, 0xd0, 0x5e, 0x28, 0x96, 0x5e,
+	0x4f, 0x7c, 0x67, 0xe8, 0x9c, 0xec, 0x44, 0xb6, 0x42, 0x01, 0xec, 0xd2, 0x78, 0x39, 0xfc, 0x7a,
+	0xe2, 0xbb, 0xf9, 0xc9, 0xba, 0x46, 0x87, 0xd0, 0xfa, 0x7c, 0x7b, 0xe7, 0xb7, 0x86, 0xce, 0xc9,
+	0x5e, 0xb4, 0xfc, 0xc4, 0xc7, 0xd0, 0x2f, 0x0f, 0x57, 0x52, 0x24, 0x8a, 0xa1, 0x2e, 0xb8, 0x7c,
+	0x35, 0xd9, 0xe5, 0x13, 0x3c, 0x83, 0x7e, 0xc4, 0xe4, 0x8c, 0xc6, 0x15, 0x15, 0x15, 0x5c, 0x41,
+	0x95, 0xfb, 0x4f, 0x55, 0xad, 0x66, 0x55, 0x3b, 0x7f, 0x55, 0x3d, 0x80, 0x41, 0x85, 0xcd, 0xc8,
+	0xc2, 0x4f, 0x60, 0x70, 0xc5, 0x54, 0x9c, 0xf2, 0xf1, 0x66, 0x1d, 0xf8, 0x15, 0x78, 0x55, 0xa0,
+	0xdd, 0x8c, 0x40, 0xdb, 0x74, 0x72, 0xf4, 0xfe, 0xb9, 0x47, 0xca, 0x57, 0x45, 0x2c, 0xde, 0xa2,
+	0xf0, 0x11, 0xf4, 0x22, 0x36, 0x17, 0xd9, 0x16, 0x42, 0x6f, 0x69, 0x50, 0x11, 0x66, 0x15, 0x5f,
+	0x42, 0xef, 0x35, 0x57, 0xda, 0x74, 0xd5, 0x5a, 0xc5, 0x53, 0xb8, 0xc7, 0x35, 0x9b, 0x2b, 0xdf,
+	0x19, 0xb6, 0x36, 0x88, 0x30, 0x20, 0xfc, 0x7e, 0xa5, 0xf9, 0xff, 0xf8, 0x7d, 0xfe, 0x73, 0x07,
+	0xf6, 0x2c, 0xa3, 0x8c, 0x51, 0x02, 0x07, 0xc5, 0x4c, 0xa0, 0xc7, 0x55, 0x71, 0x0d, 0x71, 0x0c,
+	0x46, 0x9b, 0x41, 0xd6, 0x8d, 0xde, 0xf7, 0x5f, 0xbf, 0x7f, 0xb8, 0x1d, 0xbc, 0x1b, 0x1a, 0xa4,
+	0x7a, 0xee, 0x9c, 0xa2, 0x0c, 0x3a, 0xa5, 0xdb, 0x46, 0xa3, 0xba, 0x1b, 0xf5, 0xe8, 0x05, 0x47,
+	0x5b, 0x50, 0x96, 0xd2, 0xcf, 0x29, 0x51, 0xd0, 0x59, 0x51, 0x86, 0x5f, 0xf9, 0xe4, 0x9b, 0xe1,
+	0xed, 0x96, 0x33, 0x82, 0x6a, 0x23, 0x1b, 0xc3, 0x16, 0x1c, 0x6f, 0x83, 0x59, 0xea, 0x41, 0x4e,
+	0x7d, 0x1f, 0x95, 0xa9, 0xd1, 0x3b, 0xd8, 0x2f, 0x44, 0x02, 0x79, 0xc4, 0xbc, 0x7e, 0xb2, 0x7a,
+	0xfd, 0xe4, 0xe5, 0xf2, 0xf5, 0x07, 0x35, 0xdb, 0x1b, 0x72, 0x84, 0x0f, 0x73, 0x0a, 0x40, 0x6b,
+	0x43, 0x91, 0x84, 0x83, 0x62, 0x10, 0xeb, 0xb7, 0xd7, 0x90, 0xe6, 0x60, 0xb4, 0x19, 0x54, 0xde,
+	0xe7, 0xb4, 0xbc, 0xcf, 0xc5, 0xd5, 0x9b, 0x8b, 0x29, 0xd7, 0xb7, 0x8b, 0x31, 0x89, 0xc5, 0x3c,
+	0x14, 0x5f, 0x44, 0x92, 0xd1, 0xb0, 0xfc, 0x57, 0x0c, 0xe5, 0xc7, 0x69, 0xa5, 0xf5, 0x42, 0x64,
+	0xf4, 0xc6, 0x94, 0x37, 0x54, 0xf2, 0x71, 0x3b, 0x5f, 0xff, 0xd9, 0x9f, 0x00, 0x00, 0x00, 0xff,
+	0xff, 0xeb, 0x33, 0x2b, 0xf5, 0x50, 0x05, 0x00, 0x00,
 }
