# swagger/api.swagger.json
@@ -99,7 +99,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "properties": {}
+              "$ref": "#/definitions/apiRemoveReasonResponse"
             }
           },
           "default": {
@@ -116,6 +116,43 @@
             "required": true,
             "type": "string",
             "format": "uint64"
+          }
+        ],
+        "tags": [
+          "ReasonRpc"
+        ]
+      },
+      "put": {
+        "operationId": "ReasonRpc_ReplaceReason",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiReplaceReasonResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiReplaceReasonRequest"
+            }
           }
         ],
         "tags": [
@@ -188,6 +225,32 @@
           "type": "string"
         }
       }
+    },
+    "apiRemoveReasonResponse": {
+      "type": "object"
+    },
+    "apiReplaceReasonRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "userId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "actionId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "why": {
+          "type": "string"
+        }
+      }
+    },
+    "apiReplaceReasonResponse": {
+      "type": "object"
     },
     "protobufAny": {
       "type": "object",
